--- a/pltapp/templates/pltapp/index.html
+++ b/pltapp/templates/pltapp/index.html
@@ -12,6 +12,7 @@
                 {% csrf_token %} {{ form }}
 
                 <input class="btn btn-success mt-2" type="submit" value="Add Data">
+                <a href="{% url 'update' %}" class="btn btn-info mt-2 text-muted">Update Record</a>
 
             </form>
 
